--- a/src/public/scss/_webchat.scss
+++ b/src/public/scss/_webchat.scss
@@ -31,7 +31,7 @@
             display: flex;
             grid-gap: 16px;
             gap: 16px;
-            border: 2px solid #000000;
+            border: 2px solid rgb(255, 255, 255);
             border-radius: 8px;
             background: #000000;
             box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
