bugfix/WY-395 add new disabled setting for chat selection, and expand settings page for necessary requirements

--- a/src/admin/scss/_settings.scss
+++ b/src/admin/scss/_settings.scss
@@ -13,4 +13,12 @@
 
         }
     }
+
+    .helsinki-chat-settings-section {
+        display: none;
+    }
+
+    .helsinki-chat-section-chat-general {
+        display: block !important;
+    }
 }
