--- a/assets/admin/css/styles.css
+++ b/assets/admin/css/styles.css
@@ -1,1 +1,1 @@
-#helsinki-chat-settings .settings__form ul{margin:0}#helsinki-chat-settings .settings__form ul li label{display:inline-block;min-width:10em}
+#helsinki-chat-settings .settings__form ul{margin:0}#helsinki-chat-settings .settings__form ul li label{display:inline-block;min-width:10em}#helsinki-chat-settings .helsinki-chat-settings-section{display:none}#helsinki-chat-settings .helsinki-chat-section-chat-general{display:block !important}
