feature/WY-533 fix hds-icons on account of incoming hds-core icon integration

--- a/assets/chat/genesys-v9/css/chat-genesys-gui-customization.css
+++ b/assets/chat/genesys-v9/css/chat-genesys-gui-customization.css
@@ -121,6 +121,10 @@
         fill: white;
     }
 
+    .cx-theme-helsinki-blue svg.mask-icon {
+        background-color: white;
+    }
+
     .cx-theme-helsinki-blue .cx-bubble-arrow svg {
         fill: #0000BF;
     }
