feature/WY-324 add new chat option Genesys+Watson and a feature to specify pages where to display chat

--- a/src/admin/scss/_settings.scss
+++ b/src/admin/scss/_settings.scss
@@ -12,6 +12,14 @@
 
 
         }
+
+        .helsinki-chat-settings-chat-pages {
+            display: none;
+        }
+
+        .components-form-token-field__input-container {
+            background-color: #fff;
+        }
     }
 
     .helsinki-chat-settings-section {
