--- a/src/public/scss/_webchat.scss
+++ b/src/public/scss/_webchat.scss
@@ -1,3 +1,6 @@
+/*
+    Genesys v9
+*/
 .cx-webchat {
     &.cx-theme-helsinki-blue {
         .cx-title {
@@ -48,4 +51,32 @@
             }
         }
     }
+}
+
+
+/*
+    Genesys-Watson
+*/
+#aca-wbc-chat-app-button {
+
+    #chat-app-button-wrapper {
+        max-width: calc(100vw - 24px);
+        bottom: 16px;
+        right: 16px;
+
+        @include breakpoint('xs') {
+            bottom: 24px;
+        }
+
+        @include breakpoint('s') {
+            right: 24px;
+        }
+
+        @include breakpoint('m') {
+            bottom: 32px;
+            right: 24px;
+        }
+
+    }
+
 }
