feature/WY-590 add Telia Ace chat

--- a/src/public/scss/_webchat.scss
+++ b/src/public/scss/_webchat.scss
@@ -90,3 +90,14 @@
     }
 
 }
+
+/* Telia Ace */
+
+.telia-ace-chat-button {
+    box-sizing: content-box;
+    display: none;
+    
+    &:focus {
+        outline-offset: 2px;
+    }
+}
